Fix spacing with little content

--- a/src/containers/blog/detail.module.scss
+++ b/src/containers/blog/detail.module.scss
@@ -29,7 +29,7 @@
 
 .main {
 	@extend .cell;
-	flex-grow: 0;
+	flex: 0 0 67%;
 }
 
 .date {
